# s21_snake

./: .gitignore  README.md  README_RUS.md
materials/: brick-game-v1.0.md  brick-game-v1.0_RUS.md  instructions_for_testing_rus.md  library-specification.md  library-specification_RUS.md  topics-list.md  topics-list_RUS.md
src/: Doxyfile  Makefile  fsm_snake.excalidraw  main_cli.cpp  main_qt.cpp
src/brick_game/snake/: snake.cpp  snake.h  snake_test.cpp
src/brick_game/tetris/: tetris.c  tetris.cpp  tetris.h  tetris_test.c  tetris_test.cpp
src/cmake_snake_desktop/: CMakeLists.txt
src/cmake_tetris_desktop/: CMakeLists.txt
src/controller/: controller.cpp  controller.h
src/gui/cli/: cli.c  cli.cpp  cli.h
src/gui/desktop/: CMakeLists.txt  game.cpp  game.h  gamefield.cpp  infofield.cpp  infofield.h  main.cpp  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  types.h
src/tests/: tetris_cli_test.c  tetris_cli_test.h
